@@ -316,7 +316,9 @@ sub preprocess_inline (@) { #{{{
 				$template->param(pageurl => urlto(bestlink($params{page}, $page), $params{destpage}));
 				$template->param(title => pagetitle(basename($page)));
 				$template->param(ctime => displaytime($pagectime{$page}, $params{timeformat}));
+				$template->param(ctime_raw => scalar localtime($pagectime{$page}));
 				$template->param(mtime => displaytime($pagemtime{$page}, $params{timeformat}));
+				$template->param(mtime_raw => scalar localtime($pagemtime{$page}));
 				$template->param(first => 1) if $page eq $list[0];
 				$template->param(last => 1) if $page eq $list[$#list];
 	
