@@ -5,9 +5,9 @@
 <TMPL_IF NAME="AUTHOR">
 <span class="author">
 <TMPL_IF NAME="AUTHORURL">
-<a href="<TMPL_VAR NAME=AUTHORURL>"><TMPL_VAR NAME=AUTHOR></a>
+<a href="<TMPL_VAR AUTHORURL>"><TMPL_VAR AUTHOR></a>
 <TMPL_ELSE>
-<TMPL_VAR NAME=AUTHOR>
+<TMPL_VAR AUTHOR>
 </TMPL_IF>
 </span>
 </TMPL_IF>
@@ -28,14 +28,14 @@
 <div class="inlinefooter">
 
 <span class="pagedate">
-Posted <TMPL_VAR CTIME>
+Posted <span class="date" title="<TMPL_VAR CTIME_RAW>"><TMPL_VAR CTIME></span>
 </span>
 
 <TMPL_IF NAME="TAGS">
 <span class="tags">
 Tags:
 <TMPL_LOOP NAME="TAGS">
-<TMPL_VAR NAME=LINK>
+<TMPL_VAR LINK>
 </TMPL_LOOP>
 </span>
 </TMPL_IF>
