@@ -4,6 +4,8 @@ ikiwiki (2.68) UNRELEASED; urgency=low
     code.
   * toggle: Stop embedding the full toggle code on each page using it, and
     move it to toggle.js in the javascript underlay.
+  * relativedate: New javascript-alicious plugin that makes all dates display
+    relative, in a very nice way, if I say so myself.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 17 Oct 2008 20:11:02 -0400
 
